[gd_scene load_steps=4 format=2]

[ext_resource path="res://Spaceship.gd" type="Script" id=1]
[ext_resource path="res://Spaceship.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

radius = 38.0

[node name="Spaceship" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.5478, 2.21912 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( 70, 0 )

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
